# indomitus-rover-core

./: .gitignore  LICENSE  README.md  docker-compose.yml  rviz2_conf.rviz
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: multiteam_task.md  requirement.md  standart_task.md  subsection_task.md
CAD/: README.md  structure.md
docker/: Dockerfile  docker-compose.example.yml  docker_commands.md  entrypoint.bash
docs/: docker_commands.md  gazebo.md  gazebo_rviz.md  maix-sense.md  ros2_build_project.md  rviz.md
software/: README.md
src/: ros2_basic_rules.md
src/indomitus_rover_bringup/: CMakeLists.txt  package.xml
src/indomitus_rover_bringup/launch/: rviz.launch.py
src/indomitus_rover_bringup/rviz/: robot.rviz
src/indomitus_rover_can/: CMakeLists.txt  package.xml
src/indomitus_rover_can/include/indomitus_rover_can/: can_bridge_node.hpp
src/indomitus_rover_can/launch/: can.launch.py
src/indomitus_rover_can/src/: can_bridge_node.cpp
src/indomitus_rover_description/: CMakeLists.txt  package.xml
src/indomitus_rover_description/launch/: bringup.launch.py  main.launch
src/indomitus_rover_description/meshes/suspension/: central_axii.stl
src/indomitus_rover_description/sdf/: indomitus_rover_s1.sdf
src/indomitus_rover_description/urdf/: camera.urdf.xacro  indomitus_rover_s1.urdf.xacro  rocker.urdf.xacro  suspension.urdf.xacro  wheel.urdf.xacro
src/indomitus_rover_perception/: CMakeLists.txt  package.xml
src/indomitus_rover_perception/config/: filter_params.yaml
src/indomitus_rover_perception/launch/: filter.launch.py
src/indomitus_rover_perception/scripts/: pc_filter_node.py  test_filter.py
src/indomitus_rover_sim/: CMakeLists.txt  package.xml
src/indomitus_rover_sim/include/indomitus_rover_sim/: diff_bar_controller_node.hpp  icr_controller_node.hpp  rocker_soft_mimic.hpp
src/indomitus_rover_sim/launch/: sim_gazebo.launch.py  sim_gz.launch.py  sim_gz_sdf.launch.py  sim_gz_urdf.launch.py  sim_no_gazebo.launch.py  sim_no_gz.launch.py
src/indomitus_rover_sim/parameters/: bridge_parameters.yaml  bridge_parameters_sdf.yaml  bridge_parameters_urdf.yaml  ros2_control.yaml  sdf_bridge_parameters.yaml
src/indomitus_rover_sim/sdf/: indomitus_rover_s1.sdf
src/indomitus_rover_sim/src/: diff_bar_controller_node.cpp  icr_controller_node.cpp  rocker_soft_mimic.cpp
src/indomitus_rover_sim/urdf/: gazebo_plugins.urdf.xacro  indomitus_rover_gazebo.urdf.xacro
src/indomitus_rover_sim/worlds/: erc2025_world.sdf  rover_world.sdf
src/rover_bringup/: CMakeLists.txt  package.xml
src/rover_bringup/launch/: bringup.launch.py
src/rover_bringup/rviz/: basic_save.rviz  first_try.rviz  robot.rviz
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/launch/: bringup.launch.py  main.launch
src/rover_description/meshes/suspension/: Strut.stl  rocker.stl  wheel.stl
src/rover_description/urdf/: rocker.urdf.xacro  rover_s1.urdf.xacro  suspension.urdf.xacro  wheel.urdf.xacro
src/sipeed_tof_ms_a010_ros/ros2/: CMakeLists.txt
src/sipeed_tof_ms_a010_ros/ros2/launch/: tof_test_launch.py
