<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>indomitus_rover_can</name>
  <version>0.0.0</version>
  <description>
    CAN bus interface package for the Indomitus rover, handling
    low-level communication with drive and steering hardware
  </description>
  <maintainer email="fito.pn@ucu.edu.ua">yurFitio</maintainer>
  <maintainer email="hagiychuksolomia@gmail.com">Solomia200</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
