<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>indomitus_rover_description</name>

  <version>0.0.0</version>
  <description>
    URDF/xacro robot description for the Indomitus rover,
    including links, joints, sensors and visual meshes.
  </description>
  <maintainer email="fito.pn@ucu.edu.ua">yurFitio</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
