<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>indomitus_rover_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fito.pn@ucu.edu.ua">yurifi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <exec_depend>xacro</exec_depend>
  <!-- <depend>ros_gz</depend> -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
